import { Entity, PrimaryColumn, Column, ManyToOne, JoinColumn } from 'typeorm';
import { Contest } from './contests.entity';
import { Examiner } from 'src/modules/examiners/entities/examiners.entity';

@Entity('contest_examiners')
export class ContestExaminer {
  @PrimaryColumn({ name: 'contest_id' })
  contestId: number;

  @PrimaryColumn({ name: 'examiner_id' })
  examinerId: string;

  @Column({ name: 'assignment_date', nullable: true })
  assignmentDate: Date;

  @Column({ name: 'status', nullable: true, default: 'ACTIVE' })
  status: string;

  @Column({ name: 'role', nullable: true })
  role: string;

  @ManyToOne(() => Contest)
  @JoinColumn({ name: 'contest_id' })
  contest: Contest;

  @ManyToOne(() => Examiner)
  @JoinColumn({ name: 'examiner_id' })
  examiner: Examiner;
}
