@startuml User & Profile Management

skinparam classAttributeIconSize 0

enum UserRole {
  COMPETITOR
  EXAMINER
  ADMIN
  GUARDIAN
  STAFF
}

enum UserStatus {
  ACTIVE = 1
  INACTIVE = 0
}

class User <<Entity>> {
  + userId : string <<UUID, PK>>
  --
  username : string <<unique>>
  password : string
  fullName : string
  email : string <<unique>>
  phone : string
  role : UserRole
  status : UserStatus
  positionLevel : string
  createdAt : Date
  --
  pushTokens : PushToken[]
}

class Competitor <<Entity>> {
  + competitorId : string <<PK, FK→User>>
  --
  birthday : Date
  schoolName : string
  ward : string
  grade : string
  guardianId : string
}

class Examiner <<Entity>> {
  + examinerId : string <<PK, FK→User>>
  --
  specialization : string
  assignedScheduleId : number
}

class Contest <<Entity>> {
  + contestId : number <<PK>>
}

class ContestExaminer <<Entity>> {
  + contestId : number <<PK, FK→Contest>>
  + examinerId : string <<PK, FK→Examiner>>
}

class UsersService <<Service>> {
  __ User __
  + me(userId)
  + update(id, updateUserDto)
  + submissions(userId)
  + getAchievements(userId)
}

class UsersController <<Controller>> {
  .. GET api/users ..
  + me(req)
  + submissions(req)
  + findOne(id)
  + getAchievements(userId)
  .. PUT api/users ..
  + update(id, updateUserDto)
}

User --> UserRole
User --> UserStatus
User <|-- Competitor : "userId = competitorId"
User <|-- Examiner : "userId = examinerId"
Competitor --> User : "guardianId (Guardian)"
Examiner --> ContestExaminer
ContestExaminer --> Contest

UsersController --> UsersService
UsersService --> User
UsersService --> Competitor
UsersService --> Examiner

@enduml
